--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //ConnectionString tells the program where to go find data. Pro tip, dont put any spaces in the quotations. Will save you lots of insectiside and time!
-    "BooksConnection": "Server=(localdb)\\MSSQLLocalDB;Database=OnlineBooksDB;MultipleActiveResultSets=true;"
+    "BooksConnection": "Data Source = OnlineBooksDb.sqlite"
   }
 }
